# vcnc

./: .autotools  .cproject  .gitignore  .icmconfig  .p4ignore  .project  COPYING  ChangeLog  INSTALL  Makefile.am  README  README.rst  configure.ac  sub_local.pl
doc/: Makefile.am  api-overview.md
docs/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_sources/: index.rst.txt
docs/_sources/developer/: about-this-document.rst.txt  coding-policies.rst.txt  installing-and-building.rst.txt  python-api.rst.txt  vclc.rst.txt  workflow.rst.txt
docs/_sources/user/: vcnc-clients.rst.txt
docs/about-vcnc/: vcnc-architecture.html
docs/developer/: about-this-document.html  coding-policies.html  design-notes.html  getting-started.html  installing-and-building.html  python-api.html  vclc.html  vcnc-rest.html  vcnc-web.html  workflow.html
docs/user/: getting-started.html  users-and-security.html  vcnc-clients.html
documentation/: Makefile  about-docs.rst  about-vcnc.rst  conf.py  index.rst
documentation/_build/: .anchor
documentation/about-vcnc/: vcnc-architecture.rst
documentation/developer/: about-this-document.rst  coding-policies.rst  design-notes.rst  getting-started.rst  installing-and-building.rst  python-api.rst  vclc.rst  vcnc-rest.rst  vcnc-web.rst
documentation/user/: getting-started.rst  users-and-security.rst  vcnc-clients.rst
installer/: install-me.sh  vcnc-redis.service
m4/: ChangeLog
po/: ChangeLog  LINGUAS  Makevars  es.po  fr.po  frqu.pot
rest-api-tester/: .eslintrc.yaml  package.json
rest-api-tester/lib/: configuration.js  namespace.js
rest-api-tester/test/: first.js
scripts/: configure-peercache.sh
src/: vcnc_version.cc
src/rev/: Makefile.am  POTDIRS  Rev.TMPL.C  make_p4rev.TMPL.pl  make_rev.TMPL.pl
vcnc-rest/: Makefile.am  README  README.md  aclocal.m4  app.js  configure.ac  package.json
vcnc-rest/addon/: Makefile.am  binding.gyp  package.json
vcnc-rest/addon/src/: cncSession.cc  cncSession.h
vcnc-rest/addon/src/cnctrq/: cnctrqClient.cc  cnctrqClient.h  cnctrqConsistencyWorker.cc  cnctrqConsistencyWorker.h  cnctrqDeleteWorker.cc  cnctrqDeleteWorker.h  cnctrqGetattrWorker.cc  cnctrqGetattrWorker.h  cnctrqListWorker.cc  cnctrqListWorker.h  cnctrqMetaCopyWorker.cc  cnctrqMetaCopyWorker.h  cnctrqMkdirWorker.cc  cnctrqMkdirWorker.h  cnctrqShutdownWorker.cc  cnctrqShutdownWorker.h  cnctrqVPFindWorker.cc  cnctrqVPFindWorker.h  cnctrqVPPropertiesWorker.cc  cnctrqVPPropertiesWorker.h  cnctrqWorkspaceWorker.cc  cnctrqWorkspaceWorker.h  cnctrq_client.cc
vcnc-rest/api/: swagger.yaml
vcnc-rest/autom4te.cache/: output.1  traces.0  traces.1
vcnc-rest/config/: vcnc-config.yaml  vcnc-pepsis.conf  vcnc-redis.conf
vcnc-rest/doc/: Makefile.am  MoreDocumentation.odt  README  index.md
vcnc-rest/installer/: Makefile.am  vcnc  vcnc.service
vcnc-rest/lib/: configuration.js  fulfill202.js
vcnc-rest/routes/: test.js  v1.js
vcnc-rest/src/: Makefile.am
vcnc-rest/src/rev/: Makefile.am  Rev.TMPL.H  make_gitrev.TMPL.pl  make_norev.TMPL.pl
vcnc-rest/ssl/: cert.pem  certrequest.csr  key.pem
vcnc-rest/static/: Makefile.am
vcnc-rest/vcnc-rest/static/doc-html/: Makefile.am  api-overview.html  index.html
vcnc-web/: .eslintrc.js  Makefile.am  package.json  webpack.config.dev.js  webpack.config.prod.js
vcnc-web/src/: index.html  index.js  routes.js
vcnc-web/src/actions/: actionTypes.js  settingsActions.js  workspaceEditActions.js  workspacesActions.js
vcnc-web/src/api/: workspaceApi.js  workspaceApi.spec.js
vcnc-web/src/components/: AppNavDrawer.js  CurrentVtrqSetter.js  FullWidthSection.js  Master.js  VtrqSetter.js
vcnc-web/src/components/pages/settings/: LoginDialog.js  Page.js
vcnc-web/src/components/pages/workspaces/: Page.js  WorkspaceCard.js  WorkspaceEditDialog.js  WorkspaceSpecEntryButtons.js  WorkspaceSpecEntryCard.js
vcnc-web/src/reducers/: index.js  settingsReducer.js  validate.js  workspaceEditReducer.js  workspaceEditReducer.spec.js  workspacesReducer.js  workspacesReducer.spec.js
vcnc-web/src/store/: configureStore.dev.js  configureStore.js  preloadedState.js
vcnc-web/src/styles/: styles.css
vcnc-web/tools/: build.js  buildHtml.js  srcServer.js  testSetup.js
